[package]
name = "git-ref-select"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "1.0.0-alpha.4"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
ezcmd = { git = "https://github.com/ErichDonGubler/ezcmd", version = "0.1.0" }
log = "0.4.17"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0.40"
